# pySNOW

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  project.toml  pyproject.toml
.github/workflows/: draft-pdf.yml  python-app.yml
Examples/: msd.ipynb  shape.ipynb
Examples/tutorial_structures/: sintering.xyz
paper/: paper.bib  paper.md
paper/.github/workflows/: draft-pdf.yml
snow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
snow/Examples_tutorial/: msd.ipynb
snow/catalysis/: ORR.py  Pt_ORR.py  add_molecule.py
snow/descriptors/: bar.py  cna.py  colazione.py  coordination.py  distributions.py  gcn.py  lae.py  layer_by_layer.py  saxs.py  shape_descriptors.py  steinhardt.py  strain_mono.py  time_dependent.py  utils.py
snow/io/: __init.py__  __init__.py  lammps.py  lbl_csv.py  potential.py  xyz.py
snow/lodispp/: cna.py  physics.py  pp_io.py  utils.py
snow/misc/: add_molecule.py  constants.py  rototranslation.py  trajectory_analysis.py  transform.py
snow/transform/: rototranslation.py
test/: AlAu_ih13.xyz  cube_test.xyz  dh_100_test.xyz  test_cn.py  test_kldiv.py  test_pddf.py  test_saxs.py  test_shape_desc.py  test_stuff.py  test_utils.py
tutorial/: Pt_ORR.ipynb  add_molecule.ipynb  cna.ipynb  cna.py  coordination.ipynb  directions.py  distributions.ipynb  distributions_bimetallic.ipynb  io.ipynb  io_rotations.ipynb  lbl.py  lbl_and_rototraslations.ipynb  msd.ipynb  saxs.ipynb  shape.ipynb  time_dependent.ipynb  tutorial_pySNOW_ORR.py
tutorial/.ipynb_checkpoints/: saxs-checkpoint.ipynb
tutorial/tutorial_structures/: Au13_ih.data  Au13_ih.xyz  Au13_ih_bgcns.xyz  Au13_ih_cns.xyz  Au52Rh19.xyz  Au52Rh19_rotated.xyz  Cu247_Dh.xyz  Cu309_Ih.xyz  Cu309_Ih_cnaps.xyz  Pd923_Ih.xyz  Pt309_Ih.xyz  benzene.xyz  example.dump  frame_200ns.xyz  frame_200ns_rotated.xyz  movie.xyz  train.xyz  train_rewritten.xyz
