[project]
name = "snow"
description = "Integrated tool for structural characterization at atomistic level"
readme = "README.md"
dynamic = ["version"]
keywords = ["snow", "molecular dynamics", "analysis", "atomistic", "nanoparticles"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

authors = [
    { name = "Giacomo Becatti", email = "giacomo.becatti@unimi.it" },
    { name = "Sofia Zinzani", email = "sofia.zinzani@unimi.it" },
    { name = "Davide Alimonti", email = "davide.alimonti@unimi.it" }
]

classifiers = [
    "Development Status :: 2 - Alpha",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "pytest"
]

[project.optional-dependencies]
tests = [
    "pytest"
]

[build-system]
requires = ["setuptools>=62", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
